--- a/index.html
+++ b/index.html
@@ -1,13 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles.css">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./styles.css">
+  <title>Profile-Component</title>
 </head>
+
 <body>
-    <p>oi</p>
+  <main>
+    <section class="container">
+      <section class="container_box">
+        
+        <div class="caixa-logo">
+          <div class="container_box_logo">
+            <img class="container_box_logo--photo" src="./leandro.jpeg" alt="profile-photo">
+            <h3>Leandro Aragão</h3>
+            <p>@leandroaragao31
+            <p>
+          </div>
+          <div class="caixa-editar">
+            <img src="https://icon-library.com/images/edit-icon-png/edit-icon-png-25.jpg" alt="editar">
+            <p>Editar</p>
+          </div>
+        </div>
+
+
+        <section class="container_box--division">
+          <div class="container_box--caixa1">
+            <p>Projetos</p>
+            <p>27</p>
+          </div>
+          <div class="container_box--caixa2">
+            <p>Estrelas</p>
+            <p>302</p>
+          </div>
+          <div class="container_box--caixa3">
+            <p>Seguidores</p>
+            <p>73</p>
+
+          </div>
+        </section>
+      </section>
+    </section>
+  </main>
 </body>
+
 </html>
